# cash_manager

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: backend.yml  frontend.yml
.windsurf/rules/: feature-branch.md  python-django-react-fullstack.md  update-readme.md
backend/: .flake8  .pylintrc  README.md  manage.py  pyproject.toml  requirements.txt
backend/cash_manager/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: models.py  serializers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_transaction_currency.py  0003_alter_transaction_transaction_type.py  0004_alter_transaction_options_transaction_notes_and_more.py
backend/users/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_auto_20250510_1457.py
docs/development_plans/: authentication_implementation_plan.md
frontend/: .env.development  README.md  jest.config.js  package-lock.json  package.json
frontend/src/: App.js  App.test.js  index.js  setupTests.js
frontend/src/components/: BoxCard.js  FormInput.js  Header.js
frontend/src/components/layout/: BaseLayout.js
frontend/src/components/sidebar/: Sidebar.js
frontend/src/components/theme/: ThemeContext.js  ThemeToggle.js  index.js  theme.js
frontend/src/config/: api.js  axios.js  palette.js
frontend/src/pages/: AddTransaction.js  Home.js  Login.js  Register.js  ResetPassword.js  Transactions.js
frontend/src/theme/: ThemeProvider.js  layout.js  styles.js  theme.js
scripts/: run-black.sh  run-flake8.sh  run-isort.sh  run-precommit.sh  run-prettier.sh  run-pylint.sh  safety-check.sh  setup_precommit_env.sh  start_servers.sh  stop_servers.sh
